v2/include/stratum/9p_client.h

typedef struct stm_9p_client stm_9p_client;
/* qid: 13-byte server-assigned object identity. */
typedef struct {
    uint8_t  type;        /* STM_P9_QTDIR | STM_P9_QTFILE | ... */
    uint32_t version;
    uint64_t path;
} stm_9p_qid;
/* Linux open flags accepted by stm_9p_lopen are defined in <stratum/9p.h>:
 * STM_9P_O_RDONLY (0), STM_9P_O_WRONLY (1), STM_9P_O_RDWR (2),
 * plus STM_9P_O_TRUNC, STM_9P_O_DIRECTORY, etc. The lib passes the
 * caller's flags through unchanged; server-side stratumd applies its
 * own type-vs-flag invariants. */

/* Connection options for stm_9p_dial_unix. */
typedef struct {
    /* Maximum message size to negotiate. Pass 0 to use
     * STM_9P_MSIZE_DEFAULT (128 KiB). The server may downgrade. */
    uint32_t msize;

    /* Tattach uname (effective Linux user name; "" means use
     * n_uname only). Pass NULL for "". */
    const char *uname;

    /* Tattach aname (mount-point selector; stratumd maps to a root
     * dataset). Pass NULL for "" (default root dataset). */
    const char *aname;

    /* Tattach n_uname (numeric uid; 9P2000.L extension). Pass
     * (uint32_t)-1 to use the default sentinel (matches the
     * test_9p_socket harness pattern). */
    uint32_t n_uname;

    /* Fid number to bind the attach root to. Caller-allocated. v2.0
     * convention: any uint32 except STM_9P_NOFID. The lib does not
     * track caller-allocated fids; caller must clunk before re-using
     * a fid number. */
    uint32_t root_fid;
} stm_9p_dial_opts;
/* Dial a stratumd Unix socket, negotiate version, attach to root.
 * On success returns *out pointing at a usable client. The handshake
 * sequence is: connect → Tversion("9P2000.L", msize) → Tattach.
 *
 * Returns:
 *   - STM_OK on success.
 *   - STM_EINVAL on NULL args, malformed opts (root_fid == NOFID).
 *   - STM_EIO on connect/socket error (errno preserved in
 *     stm_9p_last_errno).
 *   - STM_EBACKEND if the server's Rversion advertises a non-.L
 *     dialect.
 *   - STM_EOVERFLOW if the server's negotiated msize is below
 *     STM_9P_MSIZE_MIN (1 KiB).
 *   - Any Rlerror's mapped status from the Tattach step.
 *
 * On failure *out is set to NULL and the partially-opened socket +
 * client are closed. The caller has no observable handle to query
 * errno on dial-failure (the client is destroyed); R111 P2 F-4: if
 * detailed connect-time diagnostics matter, callers can `errno`
 * directly after the dial returns STM_EIO (preserved by the lib's
 * send_all/recv_all path on system-call failures). */
STM_MUST_USE
stm_status stm_9p_dial_unix(const char *socket_path,
                              const stm_9p_dial_opts *opts,
                              stm_9p_client **out);
/* Disconnect + free the client. Safe on NULL. */
void stm_9p_close(stm_9p_client *c);
/* Negotiated message size (after Rversion). 0 if not yet
 * connected. */
uint32_t stm_9p_msize(const stm_9p_client *c);
/* Twalk: traverse from `fid` along `n_names` path components, binding
 * the result to `new_fid`. n_names == 0 means "duplicate fid → new_fid"
 * (no traversal). On a partial walk (server walked < n_names before
 * an error) returns STM_ENOENT and `*out_walked` reports how many
 * components were traversed; new_fid is NOT bound (per 9P2000.L
 * Rwalk-with-fewer-components semantics).
 *
 * `out_qids` may be NULL to discard the per-step qids. If non-NULL
 * it must be at least n_names entries.
 *
 * Returns:
 *   - STM_OK on full walk; new_fid is bound to the destination.
 *   - STM_ENOENT on partial walk (out_walked reports how far).
 *   - STM_EINVAL on n_names > STM_9P_MAX_WALK (16) or NULL fid args.
 *   - Any Rlerror status. */
STM_MUST_USE
stm_status stm_9p_walk(stm_9p_client *c,
                          uint32_t fid, uint32_t new_fid,
                          uint16_t n_names, const char *const *names,
                          stm_9p_qid *out_qids, uint16_t *out_walked);
/* TLopen: open `fid` with Linux flags. On success populates `out_qid`
 * with the file's qid; iounit (server's preferred read/write chunk
 * size; 0 means "use msize - hdr") is returned via *out_iounit if
 * non-NULL.
 *
 * The fid must already be bound (via Tattach or Twalk). Open is
 * idempotent at the lib boundary — server-side may reject a re-open
 * with EINVAL. */
STM_MUST_USE
stm_status stm_9p_lopen(stm_9p_client *c, uint32_t fid, uint32_t flags,
                           stm_9p_qid *out_qid, uint32_t *out_iounit);
/* Tread: read up to `count` bytes at `offset` from `fid` into `buf`.
 * `count` is clamped to msize - hdr by the server. *out_count
 * reports actual bytes read (0 means EOF). */
STM_MUST_USE
stm_status stm_9p_read(stm_9p_client *c, uint32_t fid, uint64_t offset,
                          void *buf, uint32_t count, uint32_t *out_count);
/* Twrite: write up to `count` bytes from `buf` at `offset` to `fid`.
 * `count` is clamped to iounit by the lib (so the request fits in
 * one msize). *out_written reports actual bytes accepted by the
 * server; may be < count (partial write). NULL buf with count > 0
 * → STM_EINVAL. fid MUST be open with write access (TLopen with
 * STM_9P_O_WRONLY or STM_9P_O_RDWR). The fid's open-mode is
 * enforced server-side; the lib does not pre-check. */
STM_MUST_USE
stm_status stm_9p_write(stm_9p_client *c, uint32_t fid, uint64_t offset,
                           const void *buf, uint32_t count,
                           uint32_t *out_written);
/* Tclunk: forget `fid`. The fid number becomes available for reuse
 * after this call returns OK. Even on error the fid SHOULD be
 * considered cleared (per 9P2000 convention). */
STM_MUST_USE
stm_status stm_9p_clunk(stm_9p_client *c, uint32_t fid);