v2/include/stratum/cmds.h

int stm_cmd_stratumd_main(int argc, char **argv);
int stm_cmd_slate_main   (int argc, char **argv);
int stm_cmd_mkfs_main    (int argc, char **argv);
int stm_cmd_fs_main      (int argc, char **argv);